k8s/integrations/dwbrite-com/tls-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dwbrite-com-gateway
  namespace: some-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "www.example.com"
      tls:
        mode: SIMPLE
        credentialName: example-com-tls
